# libtess2

./: CMakeLists.txt  README.md
Include/: tesselator.h
Source/: allocators.h  bucketalloc.c  bucketalloc.cpp  bucketalloc.h  bucketalloc.inl  dict.cpp  dict.h  dict.inl  edgestack.h  geom.cpp  geom.h  geom.inl  libtess3.cpp  mesh.cpp  mesh.h  mesh.inl  options.h  priorityq.cpp  priorityq.h  priorityq.inl  sweep.c  sweep.cpp  sweep.h  sweep.inl  tess.c  tess.cpp  tess.h  tess.inl
Tess2.xcodeproj/: project.pbxproj
Tess3.xcodeproj/: project.pbxproj
cmake/Config/: config.cmake
